deployment/kubernetes-laravel.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
  namespace: dad-group-12
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      priorityClassName: high-priority
      containers:
        - name: api
          image: registry-172.22.21.115.sslip.io/dad-group-12/api:v2.3.0
          # ADICIONEI: Porta do contentor
          ports:
            - containerPort: 80
          # ADICIONEI: Configuração da Base de Dados
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-app
  namespace: dad-group-12
spec:
  ports:
    - port: 80
  selector:
    app: laravel-app
