deployment/kubernetes-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  namespace: dad-group-12
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mysql    # <--- Este é o nome que o Laravel vai procurar
  namespace: dad-group-12
spec:
  ports:
    - port: 3306
  selector:
    app: mysql-db
