deployment/final-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dad-group-12-ingress
  namespace: dad-group-12
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    # --- FRONTEND (VUE) ---
    - host: web-dad-group-12-172.22.21.253.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vue-app
                port:
                  number: 80

    # --- BACKEND (LARAVEL) ---
    - host: api-dad-group-12-172.22.21.253.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-app
                port:
                  number: 80

    # --- WEBSOCKETS ---
    - host: ws-dad-group-12-172.22.21.253.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: websocket-server
                port:
                  number: 80
